--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only ./src/index.ts",
-    "start": "tsc && node ./src/index.js",
-    "pm2": "tsc && pm2 start pm2.config.js"
+    "start": "tsc && node ./src/index.ts",
+    "pm2": "tsc && pm2 start pm2.config.ts"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "1.4.5-lts.1",
+    "nanoid": "^5.0.2",
     "nodemailer": "^6.9.7",
     "ts-node": "^10.9.1"
   },
