--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only ./src/index.ts",
+    "dev": "pnpx nodemon ./src/index.js",
     "start": "tsc && node ./src/index.ts",
     "pm2": "tsc && pm2 start pm2.config.ts"
   },
